# chess-sandbox

./: .copier-answers.yml  .env.ci  .env.example  .env.modal  .gitignore  AGENTS.md  Dockerfile  MIRASCOPE_LILYPAD_POC.md  PR_DESCRIPTION.md  README.md  demo_tactical_patterns.py  pyproject.toml  test_import.py  test_saliency.py  test_stockfish8.py
.claude/agents/: git-conflict-resolver.md  git-diff-summarizer.md  github-commit-pr.md  pre-commit-checker.md
.claude/skills/chess-analysis/: SKILL.md
.claude/skills/chess-commentator/: SKILL.md
.claude/skills/chess-commentator/scripts/: query_analysis.py
.github/workflows/: pr.yml  release.yml
chess_sandbox/: __main__.py  chess_agent.py  commentator.py  config.py  data_scraper.py  endpoints.py  engine_analysis.py  evaluation.py  git.py  hello.py  lichess.py  lichess_export.py  logging_config.py  pgn_scraper.py
chess_sandbox/commentary/: __init__.py  cli.py  commentator.py  commentator_mirascope.py  context.py  endpoints.py  evaluation.py  evaluation_mirascope.py  lilypad_evaluation.py  llm.py  mirascope_commentator.py  tactical_patterns.py
chess_sandbox/concept_extraction/: __init__.py  endpoints.py  stockfish_concepts.py
chess_sandbox/concept_extraction/labelling/: __init__.py  labeller.py  lichess_export.py  modal_pipeline.py  parser.py  pipeline.py  refiner.py
chess_sandbox/concept_extraction/model/: __init__.py  compare.py  dataset.py  evaluation.py  features.py  hub.py  inference.py  modal_pipeline.py  model_artefact.py  train.py
chess_sandbox/concept_labelling/: batch_refiner.py  features.py  inference.py  labeller.py  lichess_export.py  modal_pipeline.py  models.py  parser.py  patterns.py  pipeline.py  refiner.py  train.py
chess_sandbox/engine/: __init__.py  analyse.py  maia.py  position_analysis.py
chess_sandbox/puzzles_trainer/: __init__.py  callbacks.py  cli.py  dataset.py  grpo_debug.py  grpo_rewards.py  grpo_trainer.py  helper.py  inference.py  llm_evaluation.py  modal_grpo.py  modal_grpo_debug.py  modal_pipeline.py  modal_reasoning_vllm.py  modal_vllm_inference.py  prepare_dataset.py  prompts.py  puzzle_agent.py  reasoning_callbacks.py  reasoning_evaluation.py  reasoning_generator.py  reasoning_trainer.py  reasoning_verifier.py  test_eos_behavior.py  trainer.py
chess_sandbox/puzzles_trainer/toy_curriculum/: __init__.py  formats.py  generators.py  paths.py  prompts.py  tasks.py
data/models/concept_probes/: README.md
data/models/concept_probes/maia1500_block3_conv2_relu_multilabel_83ccce93/: README.md  encoder.joblib  metadata.json  model.joblib
data/models/concept_probes/probe_v1/: README.md  config.json  label_encoder.joblib  probe_metadata.json  probe_model.joblib
data/processed/: chessdotcom.jsonl
data/raw/: chessdotcom.html
data/results/: eval_gpt4o_no_engine.jsonl  eval_gpt4o_with_engine.jsonl  eval_gpt5_mini_low_no_engine.jsonl  eval_gpt5_mini_low_with_engine.jsonl
docs/: chess-llm-finetuning.md  chess-sandbox-arch.mermaid  experiment-log.md  grpo-implementation.md  stockfish8-concepts.md  vllm-reasoning-and-structured-outputs.md
docs/adrs/: 20251029-use-modal-for-serverless-endpoints.md  20251029-use-postmodern-python-tooling.md  20251030-standardize-on-httpx-and-respx.md  20251030-use-openai-sdk-directly.md  20251101-use-huggingface-hub-for-versioning.md  20251206-serve-lora-models-with-vllm-on-modal.md
docs/plans/: batch-api-integration.md  concept-extraction-hf-dag.md  concept-labelling-pipeline.md  gameknot_crawler_improvements.md  hf-better-model-card.md  modal-api-endpoint.md  modal-pipeline-execution.md
examples/: stockfish8_concepts_demo.py
models--lczerolens--maia-1500/refs/: main
models--lczerolens--maia-1500/snapshots/c71e8fac02d319dabd0e24ad270a8fa561f29b7d/: model.onnx
models--pilipolio--chess-positions-extractor/snapshots/0e35944267e24ddf318296ac358cfd2215087486/: README.md  encoder.joblib  metadata.json  model.joblib
scripts/: demo_chess_agent.py  fix_dataset_answer.py  upload_test_fixture.py
tests/: test_batch_refiner.py  test_concept_labelling_pipeline.py  test_engine_analysis.py  test_modal_pipeline.py  test_refiner.py  test_tactical_patterns.py  test_train.py
tests/concept_extraction/model/: test_evaluate.py  test_inference.py  test_train.py
tests/engine/: test_analyse.py  test_maia.py
tests/fixtures/: maia-1500.onnx  maia-1500.pt  sample_labeled_positions.jsonl
tests/puzzles_trainer/: test_reasoning_generator.py  test_reasoning_verifier.py
