[tool.poe.tasks]
# run with eg `uv run poe fmt`
fmt = "ruff format"
lint = "ruff check --fix"
check = "pyright"
test = "pytest -m 'not integration'"  # fast unit tests only (no Stockfish required)
"test:all" = "pytest"  # all tests including integration
"test:integration" = "pytest -m integration"  # integration tests only
# run all the above
all = [ {ref="fmt"}, {ref="lint"}, {ref="check"}, {ref="test"} ]

"ci:fmt" = "ruff format --check"  # fail if not formatted
"ci:lint" = "ruff check"

[project]
name = "chess_sandbox"
version = "0.1.0"
description = "Chess commentary generation using LLMs and Stockfish"
readme = "README.md"
authors = [
    { name = "Guillaume Allain", email = "guillaume.allain@gmail.com" }
]
keywords = ["chess", "stockfish", "llm", "openai", "claude", "commentary", "analysis"]

requires-python = ">=3.13"
# Core dependencies - minimal set for basic CLI and shared utilities
dependencies = [
    "chess>=1.11.2",
    "click>=8.3.0",
    "datasets>=4.3.0",
    "httpx>=0.28.0",
    "huggingface-hub>=0.27.0",
    "jinja2>=3.1.6",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
# Development tools
dev = [
    "poethepoet>=0.32.0",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "respx>=0.21.0",
    "ruff>=0.8.5",
    "types-tqdm>=4.67.0.20250809",
]

# ML: concept extraction model training/inference (torch, sklearn, lczerolens)
# For GPU support, override the index: UV_INDEX_URL=https://download.pytorch.org/whl/cu124 uv sync --group ml
ml = [
    "joblib>=1.4.0",
    "joblib-stubs>=1.5.2.0.20250831",
    "lczerolens>=0.3.3",
    "scikit-learn>=1.7.2",
    "scikit-learn-stubs>=0.0.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0,<0.24.0",
]

# Agents: LLM-based features (commentary, puzzle agent, reasoning generation)
agents = [
    "openai>=2.6.1",
    "pydantic-ai>=0.4.3",
    "pydantic-ai-slim[logfire]>=0.4.3",
    "weave>=0.51.0",
    "logfire==4.16.0"
]

# Infra: serverless deployment and caching
infra = [
    "diskcache>=5.6.3",
    "modal>=1.2.1",
]

# Dataset preparation (board images, HF datasets)
prepare-data = [
    "cairosvg>=2.8.2",
    "datasets>=4.3.0",
    "pillow>=12.0.0",
]

# SFT: supervised fine-tuning with transformers/TRL
sft = [
    "accelerate>=0.30.0",
    "bitsandbytes>=0.43.0; sys_platform == 'linux'",
    "datasets>=2.18.0",
    "peft>=0.12.0",
    "transformers>=4.40.0",
    "trl>=0.8.0",
    "wandb==0.23.0",
]

[tool.uv]
# tell uv we're building a package
package = true

[tool.setuptools.packages.find]
include = ["chess_sandbox*"]

[project.scripts]
puzzles-trainer = "chess_sandbox.puzzles_trainer.trainer:main"
puzzles-generate-task-dataset = "chess_sandbox.puzzles_trainer.dataset:main"
puzzles-generate-reasoning = "chess_sandbox.puzzles_trainer.reasoning_generator:main"
puzzle-agent = "chess_sandbox.puzzles_trainer.puzzle_agent:main"
reasoning-trainer = "chess_sandbox.puzzles_trainer.reasoning_trainer:main"
grpo-trainer = "chess_sandbox.puzzles_trainer.grpo_trainer:main"
grpo-debug = "chess_sandbox.puzzles_trainer.grpo_debug:main"
test-eos = "chess_sandbox.puzzles_trainer.test_eos_behavior:main"

# Configure PyTorch CPU-only source to avoid 7GB GPU dependencies
# This makes torch default to CPU-only builds (~100MB vs 7GB with CUDA)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true  # Only used when explicitly referenced

[tool.uv.sources]
# Use CPU-only PyTorch and torchvision from pytorch-cpu index (saves ~6.9GB vs GPU builds)
# For GPU support, override with: UV_INDEX_URL=https://download.pytorch.org/whl/cu124 uv sync
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.ruff]
# if this is a library, enter the _minimum_ version you
# want to support, otherwise do py313
target-version = "py313"
line-length = 120  # use whatever number makes you happy

[tool.ruff.lint]
# you can see the looong list of rules here:
# https://docs.astral.sh/ruff/rules/
# here's a couple to start with
select = [
  "A",    # warn about shadowing built-ins
  "E",    # style stuff, whitespaces
  "F",    # important pyflakes lints
  "I",    # import sorting
  "N",    # naming
  "T100", # breakpoints (probably don't want these in prod!)
]
# if you're feeling confident you can do:
# select = ["ALL"]
# and then manually ignore annoying ones:
ignore = [
  "N803",  # Allow uppercase argument names (sklearn convention: X_train, X_test)
  "N806",  # Allow uppercase variable names in functions (sklearn convention: X_train, X_test)
]

[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["chess_sandbox"]

[tool.pyright]
venvPath = "."          # uv installs the venv in the current dir
venv = ".venv"          #       in a folder called `.venv`
pythonVersion = "3.13"  # if library, specify the _lowest_ you support
include = ["chess_sandbox", "tests"]
strict = ["**/*.py"]    # use 'strict' checking on most files
exclude = [
    ".venv",                                              # Don't scan dependencies
    "**/concept_extraction/model/train.py",              # ML training code with sklearn
    "**/concept_extraction/model/inference.py",          # ML inference with joblib
    "**/concept_extraction/model/evaluation.py",         # ML evaluation code with sklearn
    "**/concept_extraction/model/dataset.py",            # Dataset loading with HF Hub
    "**/concept_extraction/model/model_artefact.py",     # Model artefact handling with HF Hub
    "**/puzzles_trainer/trainer.py",                     # SFT training with TRL
    "**/puzzles_trainer/reasoning_trainer.py",           # Reasoning SFT training with TRL
    "**/puzzles_trainer/grpo_trainer.py",                # GRPO training with TRL
    "**/puzzles_trainer/grpo_debug.py",                  # GRPO debug utilities with torch
    "**/puzzles_trainer/test_eos_behavior.py",           # EOS behavior testing with torch
    "**/puzzles_trainer/dataset.py",                     # Dataset loading with HF datasets
    "**/puzzles_trainer/prepare_dataset.py",             # Dataset prep with HF datasets + cairosvg
    "**/puzzles_trainer/helper.py",                      # Board image generation with cairosvg
    "**/puzzles_trainer/callbacks.py",                   # Training callbacks with wandb
    "**/puzzles_trainer/reasoning_callbacks.py",         # Reasoning callbacks with wandb
]
reportMissingTypeStubs = "warning"  # warn instead of error for third-party libs without stubs

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=chess_sandbox/commentary/endpoints.py --ignore=chess_sandbox/puzzles_trainer"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests requiring Stockfish (deselect with '-m \"not integration\"')",
]
